# dev-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
example-backend/: Cargo.toml
example-backend/src/: main.rs
proxy/: Cargo.toml
proxy/src/: config.rs  http_layer.rs  latency_injector.rs  main.rs  mock.rs  modifier.rs  proxy.rs  rate_limiter.rs  recorder.rs  storage.rs  ui.rs
ui/: package-lock.json  package.json  vite.config.js.timestamp-1759915704344-17d598c4c7ac5.mjs
ui/src/lib/: types.ts
ui/src/lib/components/: FilterPanel.svelte  Header.svelte  RequestDetail.svelte  RequestList.svelte  StatsPanel.svelte  ThemeToggle.svelte  TopEndpoints.svelte
ui/src/lib/components/charts/: MethodChart.svelte  StatusChart.svelte  TimelineChart.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/dashboard/: +page.svelte
ui/src/routes/latency/: +page.svelte
ui/src/routes/latency/[id]/: +page.svelte
ui/src/routes/latency/new/: +page.svelte
ui/src/routes/mocks/: +page.svelte
ui/src/routes/mocks/[id]/: +page.svelte
ui/src/routes/mocks/new/: +page.svelte
ui/src/routes/modifiers/: +page.svelte
ui/src/routes/modifiers/[id]/: +page.svelte
ui/src/routes/modifiers/new/: +page.svelte
ui/src/routes/rate-limits/: +page.svelte
ui/src/routes/rate-limits/[id]/: +page.svelte
ui/src/routes/rate-limits/new/: +page.svelte
ui/src/routes/recording/[id]/: +page.svelte
