[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
build = "../build.rs"

[dependencies]
pingora = "0.6"
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
rust-embed = "8.5"
mime_guess = "2.0"
http = "1.1"
structopt = "0.3"
url = "2.5"
env_logger = "0.11"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
urlencoding = "2.1"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
